# std

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .env  .gitignore  index.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  page.js
frontend/app/api/auth/[...nextauth]/: route.js
frontend/app/home/[[...ids]]/: page.jsx
frontend/components/: example.js
frontend/components/ChatRoom/: GetMessages.js  InputMessage.js  SendFile.js  SendMessage.js  index.js
frontend/components/SideMenu/: Channels.js  index.js
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20240210052524_dev/: migration.sql
frontend/prisma/migrations/20240210085507_init/: migration.sql
frontend/prisma/migrations/20240223130211_servers/: migration.sql
frontend/prisma/migrations/20240226074119_dev/: migration.sql
frontend/prisma/migrations/20240226100724_serveruser_created/: migration.sql
frontend/prisma/migrations/20240228083742_lowercases/: migration.sql
frontend/prisma/migrations/20240228093248_server_avatar/: migration.sql
frontend/prisma/migrations/20240228095423_avatar/: migration.sql
