[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rand = "0.8"
postgres = "0.19.7"
tokio = "1.36.0"
rocket-download-response = "0.5.4"
hex = "0.4.3"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
scylla = "0.12.0"
uuid = "1.7.0"
chrono = "0.4.34"
serde_json = "1.0.114"
serde = "1.0.197"
